@@ -6,7 +6,7 @@ import org.jabref.build.xjc.XjcPlugin
 import org.jabref.build.xjc.XjcTask
 
 // to update the gradle wrapper, execute
-// ./gradlew wrapper --gradle-version=4.4.1 --distribution-type=bin
+// ./gradlew wrapper --gradle-version=6.0 --distribution-type=bin
 
 buildscript {
     repositories {
@@ -17,20 +17,15 @@ buildscript {
 
 plugins {
     id 'application'
-    id 'com.gradle.build-scan' version '2.4.2'
     id "com.simonharrer.modernizer" version '1.8.0-1'
     id 'me.champeau.gradle.jmh' version '0.4.8'
     //id 'net.ltgt.errorprone' version '0.8.1'
-    id 'com.github.ben-manes.versions' version '0.25.0'
+    id 'com.github.ben-manes.versions' version '0.27.0'
     id 'org.javamodularity.moduleplugin' version '1.5.0'
     id 'org.openjfx.javafxplugin' version '0.0.8'
-    id 'org.beryx.jlink' version '2.16.0'
+    id 'org.beryx.jlink' version '2.16.2'
 }
 
-// use the gradle build scan feature: https://scans.gradle.com/get-started
-buildScan { termsOfServiceUrl = 'https://gradle.com/terms-of-service'; termsOfServiceAgree = 'yes' }
-
-// show stacktrace on error
 gradle.startParameter.showStacktrace = org.gradle.api.logging.configuration.ShowStacktrace.ALWAYS
 
 apply plugin: 'java'
@@ -47,8 +42,10 @@ apply from: 'eclipse.gradle'
 
 group = "org.jabref"
 version = "5.0.0"
+
 sourceCompatibility = 13
 targetCompatibility = 13
+
 mainClassName = "$moduleName/org.jabref.JabRefLauncher"
 
 // TODO: Ugly workaround to temporarily ignore build errors to dependencies of latex2unicode
@@ -114,10 +111,12 @@ dependencies {
     compile 'org.apache.pdfbox:fontbox:2.0.17'
     compile 'org.apache.pdfbox:xmpbox:2.0.17'
 
+    compile group: 'org.apache.commons', name: 'commons-csv', version: '1.7'
+
     compile group: 'org.apache.tika', name: 'tika-core', version: '1.22'
 
     // required for reading write-protected PDFs - see https://github.com/JabRef/jabref/pull/942#issuecomment-209252635
-    compile 'org.bouncycastle:bcprov-jdk15on:1.63'
+    compile 'org.bouncycastle:bcprov-jdk15on:1.64'
 
     compile 'commons-cli:commons-cli:1.4'
 
@@ -138,9 +137,14 @@ dependencies {
     antlr4 'org.antlr:antlr4:4.7.2'
     compile 'org.antlr:antlr4-runtime:4.7.2'
 
-    compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.5.0'
+    compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.5.1'
 
     compile 'org.postgresql:postgresql:42.2.8'
+
+    compile ('com.oracle.ojdbc:ojdbc10:19.3.0.0') {
+        // causing module issues
+        exclude module: 'oraclepki'
+    }
 
     compile ('com.google.guava:guava:28.1-jre') {
         // TODO: Remove this as soon as https://github.com/google/guava/issues/2960 is fixed
@@ -162,17 +166,17 @@ dependencies {
     compile 'org.controlsfx:controlsfx:11.0.0'
 
     compile 'org.jsoup:jsoup:1.12.1'
-    compile 'com.mashape.unirest:unirest-java:1.4.9'
+    compile 'com.konghq:unirest-java:3.1.03'
 
     compile 'org.slf4j:slf4j-api:2.0.0-alpha1'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-jcl', version: '3.0.0-20190915.182410-364'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j18-impl', version: '3.0.0-20190915.182922-250'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-plugins', version: '3.0.0-20190915.182837-57'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '3.0.0-20190915.182113-372'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '3.0.0-20190915.182215-368'
-    annotationProcessor group: 'org.apache.logging.log4j', name: 'log4j-core', version: '3.0.0-20190915.182215-368'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-jcl', version: '3.0.0-SNAPSHOT'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j18-impl', version: '3.0.0-SNAPSHOT'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-plugins', version: '3.0.0-SNAPSHOT'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '3.0.0-SNAPSHOT'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '3.0.0-SNAPSHOT'
+    annotationProcessor group: 'org.apache.logging.log4j', name: 'log4j-core', version: '3.0.0-SNAPSHOT'
 
-    compile 'de.undercouch:citeproc-java:1.0.1'
+    compile 'de.undercouch:citeproc-java:2.0.0'
 
     compile group: 'jakarta.activation', name: 'jakarta.activation-api', version: '1.2.1'
     compile group: 'jakarta.xml.bind', name: 'jakarta.xml.bind-api', version: '2.3.2'
@@ -198,19 +202,18 @@ dependencies {
         exclude module: "log4j-core"
     }
 
+
+    testCompile 'io.github.classgraph:classgraph:4.8.52'
     testCompile 'junit:junit:4.12'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.5.2'
     testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.5.2'
     testCompile 'org.junit.platform:junit-platform-launcher:1.5.2'
 
-    testCompile 'net.bytebuddy:byte-buddy-parent:1.10.1'
-    testRuntime group: 'org.apache.logging.log4j', name: 'log4j-core', version: '3.0.0-20190915.182215-368'
-    testRuntime group: 'org.apache.logging.log4j', name: 'log4j-jul', version: '3.0.0-20190915.182552-364'
+    testCompile 'net.bytebuddy:byte-buddy-parent:1.10.2'
+    testRuntime group: 'org.apache.logging.log4j', name: 'log4j-core', version: '3.0.0-SNAPSHOT'
+    testRuntime group: 'org.apache.logging.log4j', name: 'log4j-jul', version: '3.0.0-SNAPSHOT'
     testCompile 'org.mockito:mockito-core:3.1.0'
     //testCompile 'com.github.tomakehurst:wiremock:2.24.1'
-    testCompile ('org.reflections:reflections:0.9.11') {
-        exclude module: "jsr305"
-    }
     testCompile 'org.xmlunit:xmlunit-core:2.6.3'
     testCompile 'org.xmlunit:xmlunit-matchers:2.6.3'
     testCompile 'com.tngtech.archunit:archunit-junit5-api:0.11.0'
@@ -219,7 +222,7 @@ dependencies {
     testCompile "org.testfx:testfx-core:4.0.15-alpha"
     testCompile "org.testfx:testfx-junit5:4.0.15-alpha"
 
-    checkstyle 'com.puppycrawl.tools:checkstyle:8.25'
+    checkstyle 'com.puppycrawl.tools:checkstyle:8.26'
     xjc group: 'org.glassfish.jaxb', name: 'jaxb-xjc', version: '2.3.2'
     jython 'org.python:jython-standalone:2.7.1'
 }
@@ -406,14 +409,16 @@ run {
             "--add-opens", "javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
             "--add-opens", "javafx.base/com.sun.javafx.binding=com.jfoenix",
             "--add-opens", "javafx.graphics/com.sun.javafx.stage=com.jfoenix",
-            "--add-opens", "javafx.base/com.sun.javafx.event=com.jfoenix"
+            "--add-opens", "javafx.base/com.sun.javafx.event=com.jfoenix",
+            '--add-exports', 'com.oracle.truffle.regex/com.oracle.truffle.regex=org.graalvm.truffle'
 
     // TODO: The following code should have the same affect as the above one, but doesn't work for some reason
     // https://github.com/java9-modularity/gradle-modules-plugin/issues/89
     moduleOptions {
         addExports = [
                 'javafx.controls/com.sun.javafx.scene.control' : 'org.jabref',
-                'org.controlsfx.controls/impl.org.controlsfx.skin' : 'org.jabref'
+                'org.controlsfx.controls/impl.org.controlsfx.skin' : 'org.jabref',
+                'com.oracle.truffle.regex/com.oracle.truffle.regex' : 'org.graalvm.truffle'
         ]
 
         addOpens = [
@@ -473,10 +478,6 @@ processTestResources.dependsOn copyTestResources
 
 tasks.withType(Test) {
     reports.html.destination = file("${reporting.baseDir}/${name}")
-
-    jacoco {
-        append = true
-    }
 }
 
 task jacocoMerge(type: JacocoMerge) {
@@ -581,7 +582,8 @@ jlink {
                     '--vendor', 'JabRef',
                     '--app-version', "${project.version}",
                     '--win-upgrade-uuid', 'd636b4ee-6f10-451e-bf57-c89656780e36',
-                    '--win-dir-chooser',
+                    // temporarily disabled due to conflict with Jpackage update
+                    //'--win-dir-chooser',
                     '--win-shortcut',
                     '--temp', "$buildDir/installer",
                     '--resource-dir', "${projectDir}/buildres/windows"
@@ -595,8 +597,13 @@ jlink {
             installerOptions = [
                     '--vendor', 'JabRef',
                     '--app-version', "${project.version}",
-                    //'--temp', "$buildDir/installer",
-                    '--resource-dir', "${projectDir}/buildres/linux"
+                    // '--temp', "$buildDir/installer",
+                    '--resource-dir', "${projectDir}/buildres/linux",
+                    '--linux-menu-group', 'Office;',
+                    '--linux-rpm-license-type', 'MIT',
+                    // '--license-file', "${projectDir}/LICENSE.md",
+                    '--description', 'JabRef is an open source bibliography reference manager. The native file format used by JabRef is BibTeX, the standard LaTeX bibliography format.',
+                    '--linux-shortcut'
             ]
         }
 
@@ -633,6 +640,13 @@ if (OperatingSystem.current().isLinux()) {
         }
     }
 }
+
+// Delete unnecessary folder in application image
+// TODO: Remove this workaround as soon as https://github.com/beryx/badass-jlink-plugin/issues/51 is fixed
+task deleteModsFolder(type: Delete) {
+    delete "$buildDir/distribution/JabRef/app/mods"
+}
+deleteModsFolder.shouldRunAfter jpackageImage
 
 jmh {
     warmupIterations = 5
